2006-02-15 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* init.d/mountall.sh: fixes for bug #10509, minor fix
	* WIP: holding this fix back for 1 week from today so that
	  some init scripts and spells can be fixed
	* WIP: and removed, no longer necesary
	* init.d/keymap.conf: One variabl was left set which broke stuff
	* init.d/keymap.sh: Not catching one of the vars
	* DETAILS: updated PATCHLEVEL

2006-02-14 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* WIP: removed
	* init.d/keymap.conf: added UNICODE_START
	* init.d/keymap.sh: support for starting unicode_start,
	  minor fix thanks to Pol for catching it... good peer review
	* DETAILS: updated PATCHLEVEL

2006-02-14 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
	* init.d/keymap.conf: added new variable SETFONT_ARGS for 
	  setfont support from kbd spell
	* init.d/keymap.sh: support for both consolechars and setfont 
	  with separate argument variables

2006-02-14 Pol Vinogradov <vin.public@gmail.com>
	* init.d/keymap.sh, init.d/keymap.conf: added posibility to set
		CONSOLECHARS_ARGS for many consoles, not only the first one

2006-01-18 Arwed v. Merkatz <v.merkatz@gmx.net>
	* init.d/devices: re-enable udevstart for now, coldplug needs to wait
	  for the required disc devices to come up so mountall.sh doesn't fail.
	  Until that is the case we want udevstart to run.
	* DETAILS: updated PATCHLEVEL

2006-01-16 Arwed v. Merkatz <v.merkatz@gmx.net>
	* init.d/devices: use 'builtin echo' to disable hotplug so it works,
	  don't run udevstart anymore (handled by the coldplug init script
	  from udev) on kernels >= 2.6.15
	* DETAILS: updated PATCHLEVEL

2005-12-18 David Brown <dmlb2000@gmail.com>
	* init.d/devices: suggestions from arwed to change kernel.hotplug

2005-12-18 David Brown <dmlb2000@gmail.com>
	* init.d/devices: fix uname -r parsing (bug #10221)

2005-12-17 Treeve Jelbert <treeve01@pi.be>
	* init.d/devices: refine previous fix
	  fix bug #10221

2005-12-16 Treeve Jelbert <treeve01@pi.be>