@@ -1,0 +1,3 @@
+# This variable controls if you want removal of /tmp contents
+# on bootup(default unset to set put yes in)
+CLEAR_TMP=
