@@ -1,3 +1,7 @@
+2006-02-25 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+	* init.d/mountall.sh: fixes for bug #10509-reopened
+	* init.d/mountall.conf: config file
+
 2006-02-15 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
 	* init.d/mountall.sh: fixes for bug #10509, minor fix
 	* WIP: holding this fix back for 1 week from today so that
